force-app/main/default/objects/Policy_Check__c/Policy_Check__c.object-meta.xml
<CustomObject>
    <description>A control that fired during a decision, with its evaluation and thresholds. Master-detail child of Decision_Record__c. Source for the What constrained it panel.</description>
    <label>Policy Check</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Policy Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>