force-app/main/default/objects/Policy_Check__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <label>Actual Value</label>
    <description>The observed value the control compared against the threshold, stored as text.</description>
    <inlineHelpText>The observed value the control measured.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>