force-app/main/default/objects/Policy_Check__c/fields/Control_Key__c.field-meta.xml
<CustomField>
    <fullName>Control_Key__c</fullName>
    <label>Control Key</label>
    <description>Stable key of the control that was evaluated, matched against Evidence_Control_Mapping__mdt.</description>
    <inlineHelpText>The identifier of the control that fired.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>