force-app/main/default/objects/Policy_Check__c/fields/Control_Label__c.field-meta.xml
<CustomField>
    <fullName>Control_Label__c</fullName>
    <label>Control Label</label>
    <description>Human-readable name of the control, e.g. Auto-deny ceiling.</description>
    <inlineHelpText>The readable name of the control.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>