force-app/main/default/objects/Policy_Check__c/fields/Decision_Record__c.field-meta.xml
<CustomField>
    <fullName>Decision_Record__c</fullName>
    <label>Decision Record</label>
    <description>The decision this control evaluation belongs to.</description>
    <type>MasterDetail</type>
    <referenceTo>Decision_Record__c</referenceTo>
    <relationshipLabel>Policy Checks</relationshipLabel>
    <relationshipName>Policy_Checks</relationshipName>
</CustomField>