force-app/main/default/objects/Policy_Check__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <description>Explanatory text for the evaluation, e.g. Passed. Claim value $2,840.</description>
    <inlineHelpText>The explanation of why the control evaluated as it did.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>