force-app/main/default/objects/Policy_Check__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <description>Outcome of the control evaluation for this decision.</description>
    <inlineHelpText>Whether the control Passed, Blocked, or was Not Triggered.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Not_Triggered</fullName>
                <label>Not Triggered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>