force-app/main/default/objects/Policy_Check__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <description>The configured threshold the control checked against, stored as text to allow currency, percentage, or count values.</description>
    <inlineHelpText>The limit the control tested against.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>